[package]
name = "acme-lib"
description = "Library for requesting certificates from an ACME provider."
license = "MIT"
repository = "https://github.com/algesten/acme-lib"
readme = "README.md"
version = "0.8.1"
authors = ["Martin Algesten <martin@algesten.se>"]
keywords = ["letsencrypt", "acme"]
categories = ["web-programming", "api-bindings"]
edition = "2018"

[dependencies]
base64 = "0.13"
hyper = { version = "0.14", default-features = false }
hyper-rustls = { version = "0.22", default-features = false, features = ["webpki-tokio"] }
hyper-timeout = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1" }
rcgen = { version = "0.8", default-features = false, features = ["pem"] }
rustls = "0.19"
ring = "0.16"
once_cell = "1"
biscuit.path = "../../lawliet89/biscuit"

[dev-dependencies]
env_logger = { version = "0.8", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
regex = "1.4"
